en: update header

--- a/src/style/container.scss
+++ b/src/style/container.scss
@@ -51,6 +51,7 @@
         }
         .user{
             button{
+                min-width: 150px;
                 height: 40px;
                 padding: 4px 20px;
                 border-radius: 25px;
