--- a/src/style/container.scss
+++ b/src/style/container.scss
@@ -47,6 +47,7 @@
             .img{
                 width: 26px;
                 height: 26px;
+                cursor: pointer;
             }
         }
         .user{
